--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" herf="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>MING Courses</title>
   </head>
   <body>
